.archive/n8n/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: n8n
spec:
  selector:
    matchLabels:
      app: n8n
  serviceName: n8n
  replicas: 1
  template:
    metadata:
      labels:
        app: n8n
    spec:
      containers:
        - name: n8n
          image: docker.n8n.io/n8nio/n8n:1.109.1@sha256:0257f3f0a5aef5edbe137972afc1915152d7e25fd5f596a28fd32d2622381156
          ports:
            - containerPort: 5678
          volumeMounts:
            - name: n8n-data
              mountPath: /home/node/.n8n

      volumes:
        - name: n8n-data
          persistentVolumeClaim:
            claimName: n8n-data
