.archive/n8n/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`n8n.kentaro1043.com`)
      services:
        - name: n8n
          port: 5678

  tls:
    secretName: n8n-tls
